feat(search&registration)

--- a/travel/src/app/layout/header/header.component.html
+++ b/travel/src/app/layout/header/header.component.html
@@ -46,8 +46,8 @@
             </button>
             <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                 <div class="navbar-nav ml-auto py-0">
-                    <a [routerLink]="['']" class="nav-item nav-link active">Home</a>
-                    <!--<a [routerLink]="['/services']" class="nav-item nav-link">Services</a>-->
+                    <a [routerLink]="['']" class="nav-item nav-link active">Accueil</a>
+                    <a [routerLink]="['/services/registration']" class="nav-item nav-link">Inscription</a>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
             </div>
