feat(authentication)secure page user

--- a/travel/src/app/layout/header/header.component.html
+++ b/travel/src/app/layout/header/header.component.html
@@ -45,13 +45,12 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
-                <div class="navbar-nav ml-auto py-0">
-                    <a [routerLink]="['']" class="nav-item nav-link active">Accueil</a>
-                    <a [routerLink]="['/services/registration']" class="nav-item nav-link">Inscription</a>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
-                </div>
+                <app-menu [isLoggedIn]="isLoggedIn"></app-menu>
             </div>
+            <app-user-info *ngIf="isLoggedIn" [username]="username" class="text-lg-right" id="navbarCollapse"></app-user-info>
+           
         </nav>
     </div>
+   
 </div>
 <!-- Navbar End -->
